syntax = "proto3";

import "google/protobuf/timestamp.proto";

package relay;
option go_package = "github.com/modelgate/modelgate/pkg/proto/model/relay";

message RelayUsage {
  int64 id = 1;
  int64 total_request = 2;
  int64 total_success = 3;
  int64 total_failed = 4;
  int64 total_point = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message UsageSerie {
  string name =1;
  repeated UsageItem data = 2;
}

message UsageItem {
  string label =1;
  int64 value = 2;
}